updated .env example files

--- a/client/.env.local.example
+++ b/client/.env.local.example
@@ -1,9 +1,16 @@
 # client/.env.local.example
 
-AUTH0_SECRET=
-AUTH0_BASE_URL=
-AUTH0_ISSUER_BASE_URL=
-AUTH0_CLIENT_ID=
-AUTH0_CLIENT_SECRET=
-AUTH0_AUDIENCE=
-AUTH0_SCOPE=
+# Secret key for Auth0 - To generate, run `openssl rand -hex 32` in the command line
+AUTH0_SECRET=replace-with-your-own-secret-generated-with-openssl
+
+# The base URL for your application
+AUTH0_BASE_URL='http://localhost:3000'
+
+# Your Auth0 tenant domain
+AUTH0_ISSUER_BASE_URL='{your-auth0-tenant-domain}'
+
+# Your Auth0 client ID
+AUTH0_CLIENT_ID='{your-auth0-client-id}'
+
+# Your Auth0 client secret
+AUTH0_CLIENT_SECRET='{your-auth0-client-secret}'
