--- a/server/.env.example
+++ b/server/.env.example
@@ -1,11 +1,3 @@
 # server/.env.example
 
-PORT=
-
-AUTH0_SECRET=
-AUTH0_BASE_URL=
-AUTH0_ISSUER_BASE_URL=
-AUTH0_CLIENT_ID=
-AUTH0_CLIENT_SECRET=
-AUTH0_AUDIENCE
-AUTH0_SCOPE=
+PORT=5000
