--- a/client/package.json
+++ b/client/package.json
@@ -32,19 +32,19 @@
   "dependencies": {
     "@auth0/nextjs-auth0": "^3.2.0",
     "concurrently": "^8.2.1",
-    "next": "13.5.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "next": "13.5.6"
   },
   "devDependencies": {
+    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10",
-    "eslint": "^8",
-    "eslint-config-next": "13.5.4",
     "postcss": "^8",
     "tailwindcss": "^3",
-    "typescript": "^5"
+    "eslint": "^8",
+    "eslint-config-next": "13.5.6"
   }
 }
