--- a/server/package.json
+++ b/server/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "description": "The backend of the Next.js-Express-Auth0 integration template. It's built using Express.js and provides API endpoints, authentication routes, and middleware configurations.",
+  "homepage": "https://benjamin-chavez.com/blog/integrating-next.js-with-express.js-using-auth0-for-authentication",
   "scripts": {
     "start": "nodemon src/server.ts"
   },
@@ -13,16 +14,17 @@
     "template",
     "backend",
     "api",
-    "typescript"
+    "typescript",
+    "node"
   ],
   "author": {
     "name": "Ben Chavez",
     "email": "ben.m.chavez@gmail.com",
-    "url": "https://benjamin-chavez.com/"
+    "url": "https://benjamin-chavez.com"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/benjamin-chavez/node-pg-knex-passport-template"
+    "url": "https://github.com/benjamin-chavez/nextjs-express-auth0-template"
   },
   "license": "MIT",
   "dependencies": {
