ending code from blog post

--- a/server/package.json
+++ b/server/package.json
@@ -35,11 +35,14 @@
   },
   "dependencies": {
     "cookie-parser": "~1.4.6",
+    "cors": "^2.8.5",
     "debug": "~4.3.4",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
     "express-flash": "^0.0.2",
+    "express-jwt": "^8.4.1",
+    "jwks-rsa": "^3.1.0",
     "morgan": "~1.10.0"
   },
   "devDependencies": {
